redid the style sheet

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1> Magicaryn</h1>
-        <nav>
+        <nav style="color:#73B793;">
             <ul>
                 <li>About Me</li>
                 <li>Work</li>
@@ -24,20 +24,19 @@
     </header>
 
     <main>
-        <img src="./New folder/OIP (2).jpg" alt="lightning" width="100%"  height="300px">
-        <div class="botright">
-        The Jellyfish has arrived </div>
+        <section class="top-banner">
+            <div>
+                The Jellyfish has arrived </div>
+        </section>
 
+        <section class="content" style=>
 
-        <section class="content" style="border:1px solid black">
-
-            <section class="about-me">
+            <section class="about-me" style=>
                 <div class="left">
                     <h2>About Me</h2>
                 </div>
-                <div class="right">
-                    <p>This is the about me section. I have no idea what that text says as the image you told me to work
-                        from has a continuous scroll function making it difficult to stop and read the section.</p>
+                <div class="right intro">
+                    <p>Hello! My name is Caryn and I am a prospering developer! I have not had any prior experience in the development world, unless myspace back in 2004 counts lol. I am a carefree spirit but have a strong attention to details. That means I can provide fun and unique application with the solid quality to enhance the experience! This portfolio is currently empty as I have no prior projects to display, but there will be plenty to come in the future! With that being said, please enjoy some of my favorite things below!</p>
                 </div>
             </section>
 
@@ -45,41 +44,43 @@
                 <div class="left">
                     <h2>Work</h2>
                 </div>
+                <section class="card-box" style>
+                    <div class="right card-insert">
+                        <div class="interest" id="top-banner">
 
-                <div class="right">
-                    <div class="interest" id="top-banner">
-                        <img src="./New folder/cats.jpg" alt="cats" width="1200px" height="600px">
-                        <h3>Surf Report</h3>
-                        <p>Mern Stack</p>
+                            <h3>Cats</h3>
+                            <p>Cant be on the internet without adding some cats!</p>
+                        </div>
+<section class="mid-banners">
+                        <div class="row" id="mid-banner">
+                            <div class="interest">
+
+                                <h3>Traveling</h3>
+                                <p>ive now been to 5 different countries and try to go to a new one every year.</p>
+                            </div>
+
+                            <div class="interest">
+
+                                <h3>Anime!</h3>
+                                <p>Anime has something for anyone and everyone</p>
+                            </div>
+                        </div>
+                        <div class="row" id="mid-banner">
+                            <div class="interest">
+
+                                <h3>Video games!</h3>
+                                <p>Video games are life. i have made so many friends all around the world.</p>
+                            </div>
+
+                            <div class="interest">
+
+                                <h3>Flowers</h3>
+                                <P>always stop to smell the roses!! but, these are plumerias. They are my favorite</P>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="row" id="mid-banner">
-                        <div class="interest">
-                            <img src="./New folder/game.webp" alt="xbox controller" width="350px" height="200px">
-                            <h3>LED wall</h3>
-                            <p>Node/IoT</p>
-                        </div>
-
-                        <div class="interest">
-                            <img src="./New folder/travel.jpg" alt="traveling" width="350px" height="200px">
-                            <h3>Calculator</h3>
-                            <p>React/Javascript/CSS</p>
-                        </div>
-                    </div>
-                    <div class="row" id="mid-banner">
-                        <div class="interest">
-                            <img src="./New folder/flower.jpg" alt="plumeria" width="350px" height="200px">
-                            <h3>Pastel Puzzels</h3>
-                            <p>MERN stack</p>
-                        </div>
-
-                        <div class="interest">
-                            <img src="./New folder/manga.jpg" alt="naruto manga" width="350px" height="200px">
-                            <h3>Run Buddy</h3>
-                            <P>HTML/CSS</P>
-                        </div>
-                    </div>
-                </div>
+                </section>
+                </section>
             </section>
 
             <section class="contact">
@@ -87,7 +88,7 @@
                     <h2>Contact Me</h2>
                 </div>
                 <div class="right">
-                    <nav id="contact-list">
+                    <nav>
                         <ul>
                             <li>555.555.5555</li>
                             <li>myemail@website.com</li>
