--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1> Magicaryn</h1>
         <nav style="color:#73B793;">
             <ul>
-                <li>About Me</li>
+                <li href="#about-me">About Me</li>
                 <li>Work</li>
                 <li>Contact Me</li>
                 <li>Resume</li>
@@ -26,17 +26,22 @@
     <main>
         <section class="top-banner">
             <div>
-                The Jellyfish has arrived </div>
+                Magikarp used splash! But it failed... </div>
         </section>
 
-        <section class="content" style=>
+        <section class="content">
 
-            <section class="about-me" style=>
+            <section class="about-me">
                 <div class="left">
-                    <h2>About Me</h2>
+                    <h2 id="about me">About Me</h2>
                 </div>
                 <div class="right intro">
-                    <p>Hello! My name is Caryn and I am a prospering developer! I have not had any prior experience in the development world, unless myspace back in 2004 counts lol. I am a carefree spirit but have a strong attention to details. That means I can provide fun and unique application with the solid quality to enhance the experience! This portfolio is currently empty as I have no prior projects to display, but there will be plenty to come in the future! With that being said, please enjoy some of my favorite things below!</p>
+                    <p>Hello! My name is Caryn and I am a prospering developer! I have not had any prior experience in
+                        the development world, unless myspace back in 2004 counts lol. I am a carefree spirit but have a
+                        strong attention to details. That means I can provide fun and unique application with the solid
+                        quality to enhance the experience! This portfolio is currently empty as I have no prior projects
+                        to display, but there will be plenty to come in the future! With that being said, please enjoy
+                        some of my favorite things below!</p>
                 </div>
             </section>
 
@@ -46,40 +51,40 @@
                 </div>
                 <section class="card-box" style>
                     <div class="right card-insert">
-                        <div class="interest" id="top-banner">
-
+                        <div class="interest">
+                            <img src="./New folder/02-run-buddy.jpg" alt="">
                             <h3>Cats</h3>
                             <p>Cant be on the internet without adding some cats!</p>
                         </div>
-<section class="mid-banners">
-                        <div class="row" id="mid-banner">
-                            <div class="interest">
+                        <section class="mid-banners">
+                            
+                                <div class="small-interest">
+                                    <img src="./New folder/calc.jpg" alt="">
+                                    <h3>Traveling</h3>
+                                    <p>ive now been to 5 different countries and try to go to a new one every year.</p>
+                                </div>
 
-                                <h3>Traveling</h3>
-                                <p>ive now been to 5 different countries and try to go to a new one every year.</p>
-                            </div>
+                                <div class="small-interest">
+                                    <img src="./New folder/flower.jpg" alt="">
+                                    <h3>Anime!</h3>
+                                    <p>Anime has something for anyone and everyone</p>
+                                </div>
 
-                            <div class="interest">
 
-                                <h3>Anime!</h3>
-                                <p>Anime has something for anyone and everyone</p>
-                            </div>
-                        </div>
-                        <div class="row" id="mid-banner">
-                            <div class="interest">
+                                <div class="small-interest">
+                                    <img src="./New folder/led wall.jpg" alt="">
+                                    <h3>Video games!</h3>
+                                    <p>Video games are life. i have made so many friends all around the world.</p>
+                                </div>
 
-                                <h3>Video games!</h3>
-                                <p>Video games are life. i have made so many friends all around the world.</p>
-                            </div>
-
-                            <div class="interest">
-
-                                <h3>Flowers</h3>
-                                <P>always stop to smell the roses!! but, these are plumerias. They are my favorite</P>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                                <div class="small-interest">
+                                    <img src="./New folder/light.jpg" alt="">
+                                    <h3>Flowers</h3>
+                                    <P>always stop to smell the roses!! but, these are plumerias. They are my favorite
+                                    </P>
+                                </div>
+                           
+                        </section>
                 </section>
             </section>
 
