change to bio and readme SS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="right intro">
                         <p>
                             Hello! My name is Caryn and I am a prospering developer! I have not had any prior experience in
-                        the development world. I am a carefree spirit but have a
+                        the development world but I am so excited to be jumping in head first. I like to think of myself as a carefree spirit but I have a
                         strong attention to details. That means I can provide fun and unique applications with the solid
                         quality to enhance the experience! This portfolio is currently empty as I have no prior projects
                         to display, but there will be plenty to come in the future! With that being said, please enjoy
